feat: link publications to posts
